# perfcomp

./: .travis.yml  CMakeLists.txt  appveyor.yml
cmake/: ProjTools.cmake
include/perfcomp/: builddef.h  version.h
include/perfcomp/time/: cpu.h  wall.h
src/: NOTES  version.c
src/time/: cpu.c  wall.c
test/: CMakeLists.txt  tCPUTime.c  tPerfcompVersion.c  tWallTime.c
